--- a/style.css
+++ b/style.css
@@ -1,64 +1,35 @@
 *{
-    margin: 0%;
     padding: 0%;
-}
-#playArea{
-    display: flex;
-    margin-left: auto;
-    margin-right: auto;
-}
-#GHBVid{
-    display: none;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0%;
 }
 body{
     background-color: #210b30;
 }
-#icons{
+#GHBVid {
+    display: none;
+}
+
+#game {
+    border: 4px solid red;
     display: flex;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
+    justify-content: center;
 }
-.ikoner {
-    position:relative;
-    left: 7em;
-    bottom: 18em;
-    width: 200%;
-    padding: 10px;
-    margin-left: auto;
-    margin-right: auto;
+#icons {
+    border: 4px solid yellow;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
 }
-@media (min-width: 600px ){
-    #playArea{
-        display: flex;
-        margin-left: auto;
-        margin-right: auto;
-        width: 30%;  
-    }
-    #GHBVid{
-        display: none;
-        margin-left: auto;
-        margin-right: auto;
-        width: 30%;  
-    }
-    .ikoner {
-        width: 40%;
-        position:relative;
-        left: 7em;
-        bottom: 7em;
-        padding: none;
-    }
-    #icons{
-        display:flex;
-        margin: auto;
-    }
-    #icons{
-        display: flex;
+
+@media (max-width: 768px) {
+    #icons {
         position: relative;
-        margin-left:20%;
-        margin-right: 16%;
-        margin-top: 20px;
+        left: auto;
+        top: auto;
+        transform: none;
+        justify-content: center;
     }
 }
+
