--- a/style.css
+++ b/style.css
@@ -31,5 +31,8 @@ body{
         transform: none;
         justify-content: center;
     }
+    #alchohol #Cannabis #cocain #Ecstasy #GHBIkon #LSD{
+        width: 80%;
+    }
 }
 
