--- a/style.css
+++ b/style.css
@@ -1,39 +1,104 @@
+@font-face {
+    font-family: prstart;
+    src: url(assets/fonts/prstart.ttf);
+}
+@font-face {
+    font-family: dogica;
+    src: url(assets/fonts/dogica.otf);
+}
 *{
     padding: 0%;
     margin: 0%;
 }
+main {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 5px;
+}
 body{
     background-color: #210b30;
 }
-#playArea {
-    border: 2px solid lime;
+#info {
+    min-height: 356px;
+    max-height: 356px;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
-#GHBVid {
+h1 {
+    line-height: 35px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 10%;
+    color: #ffd000;
+    font-family: prstart;
+    padding: 15px;
+    border: 5px solid #ffd000;
+    background-color: #210b30;
+}
+p {
+    line-height: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    margin-left: 10%;
+    color: #ffd000;
+    font-family: dogica;
+    padding: 15px;
+    padding-right: 40px;
+    border: 5px solid #ffd000;
+    background-color: #210b30
+}
+.videos {
+    border: 5px solid #ffd000;
     display: none;
+}
+#playArea {
+    border: 5px solid #ffd000;
 }
 
 #game {
-    border: 2px solid red;
     display: flex;
     justify-content: center;
+    margin-top: 20px;
+    margin: 20px;
 }
 #icons {
-    border: 2px solid yellow;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
+    display:flex;
+    flex-wrap: wrap;
+    gap: 10px;
     justify-content: center;
 }
 
-@media (max-width: 768px) {
+@media (max-width: por) {
     #icons {
-        position: relative;
         left: auto;
         top: auto;
         transform: none;
         justify-content: center;
-        grid-template-columns: repeat(2, 1fr);
     }
+    .iconItem {
+        flex: 1 1 calc(33.33% - 10px);
+        max-width: calc(33.33% - 10px); 
+    }
+}
+
+#play {
+    margin-top: 30px;
+    padding: 15px;
+    background-color: #ffd000;
+    font-family: prstart;
+    font-size: xxx-large;
+    position: absolute;
+}
+
+#startScrn {
+    margin-top: 30px;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#StartVid {
+    display: none;
 }
 
